# eiq-apps-imx

./: .gitmodules  Makefile.am  README  SCR.txt  autogen.sh  configure.ac
src/: Makefile.am  gstimxcommon.c  gstnninferencedemo-mobilenet-ssd-camera  gstnninferencedemo-mobilenet-ssd-video  gstnninferencedemo-posenet-camera  gstnninferencedemo-posenet-video  gstnninferencedemo.cpp  gstnninferencedemo.h  inference.cpp  inference.h  mobilenet_ssd.cpp  mobilenet_ssd.h  posenet.cpp  posenet.h  tflite_benchmark.cpp  tflite_benchmark.h  tflite_inference.cpp  tflite_inference.h  utils.cpp  utils.h
